# python-my-app

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: reviewdog.yml
python_my_app/: main.py
